From 73f7a47 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In function incoherent_kbin_averaging(), add a progressbar

From f783389 (master):
=====================

In prisim/bispectrum_phase.py,

(*) In function incoherent_cross_power_spectrum_average(), fix bug in
estimating axes to average in case of subsample differences

From aadeca3 (noise):
====================

In prisim/bispectrum_phase.py,

(*) In member function subsample_differencing() of class ClosurePhase,
fix bug in creation of the outshape

From 8700a47 (noise):
====================

(*) Add prisim/examples/simparms/noise_update_parms.yaml that serves
as a template for scripts/update_PRISim_noise.py

(*) Update .gitignore

In scripts/update_PRISim_noise.py,

(*) Update default location of noise parameters file to
prisim/examples/simparms/noise_update_parms.yaml

From 518ca3c (pyuvdata):
=======================

In scripts/make_redundant_visibilities.py,

(*) Fix bug in reading and saving of attribute projected_baselines

In scripts/update_PRISim_noise.py,

(*) Fix bug in reading and saving of attribute projected_baselines

In scripts/write_PRISim_visibilities.py,

(*) Fix bug in reading and saving of attribute projected_baselines

From fb71114 (noise):
====================

(*) Add scripts/update_PRISim_noise.py to repo, which updates noise
in a PRISim output

In prisim/interferometry.py,

(*) In member function save() of class InterferometerArray, fix bug
in saving Tsysinfo parameters
(*) In member function __init__() of class InterferometerArray, fix
bug in reading Tsysinfo parameters

In scripts/write_PRISim_visibilities.py,

(*) Minor change in description string

From 08d74fd (pyuvdata):
=======================

In scripts/make_redundant_visibilities.py,

(*) Import script scripts/write_PRISim_visibilities.py as a module
(*) Update the __main__() function to set up parameters to be passed
to save() function in imported scripts/write_PRISim_visibilities.py